# dsml-kit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.dev.yaml  compose.gpu.yaml  compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-socket-permissions.sh
.github/: dependabot.yml  labeler.yml
.github/agents/: dsml-kit-maintainer.agent.md
.github/workflows/: cache-cleanup.yml  codacy-security-scan.yml  docker-publish.yml  docker-refresh.yml  docker-release.yml  greetings.yml  issue-summary.yml  labeler.yml  manual-greeting.yml  pypi-publish.yml  release.yml  stale.yml  validate.yml
config/: bashrc
images/base/: Dockerfile  requirements-base.txt  requirements-extended.txt  requirements-full.txt  requirements-minimal.txt  requirements.txt
profiles/: base.yml  dev.toml  dev.yml  extended.yml  full.toml  full.yml  gpu.toml  gpu.yml  minimal.toml  minimal.yml
scripts/: build.sh  clean.sh  common.sh  publish.sh  run.sh  shell.sh  validate.sh
src/dsml/: __init__.py  __main__.py  backends.py  cli.py  compose.py  config.py  docker.py  doctor.py  images.py  options.py  paths.py  profiles.py  runtime.py  tokens.py
tests/: conftest.py  test_compose_config.py  test_compose_runtime.py  test_static_contract.py
tests/integration/: test_gpu_command.py  test_image_smoke.py  test_import_contract.py  test_runtime_docker.py
tests/unit/: test_backends.py  test_cli.py  test_compose.py  test_config.py  test_docker.py  test_docker_command_builder.py  test_doctor.py  test_images.py  test_paths.py  test_profiles.py  test_runtime.py  test_static_contract.py  test_version.py
